@@ -13,6 +13,7 @@ Version 6.4.11
     week() und weekISO8601()
   - Neue Funktion CString::setInitialBuffersize
   - Fehlende Funktion CString::Capacity implementiert
+  - CFile::Open mit Formatstrinf wurde umbenannt in CFile::Openf
 
 Version 6.4.10  vom 10.11.2011	(CVS-Tag: REL_6_4_10)
   - CCurl-Klasse: Signals werden nun standardmäßig deaktiviert,
